# ChangeLog for app-emacs/ruby-mode
# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/app-emacs/cvs-repo/gentoo-x86/app-emacs/ruby-mode/ChangeLog,v 1.36 2007/11/16 07:32:02 ulm Exp $

  16 Nov 2007; Ulrich Mueller <ulm@gentoo.org> -ruby-mode-1.8.2.ebuild:
  Remove old.

  16 Nov 2007; Steve Dibb <beandog@gentoo.org> ruby-mode-1.8.6.ebuild:
  amd64 stable, bug 198532

  14 Nov 2007; Jeroen Roovers <jer@gentoo.org> ruby-mode-1.8.6.ebuild:
  Stable for HPPA (bug #198532).

  11 Nov 2007; Raúl Porcel <armin76@gentoo.org> ruby-mode-1.8.6.ebuild:
  alpha/ia64 stable wrt #198532

  10 Nov 2007; Markus Rothe <corsair@gentoo.org> ruby-mode-1.8.6.ebuild:
  Stable on ppc64; bug #198532

  09 Nov 2007; nixnut <nixnut@gentoo.org> ruby-mode-1.8.6.ebuild:
  Stable on ppc wrt bug 198532

  09 Nov 2007; Dawid Węgliński <cla@gentoo.org> ruby-mode-1.8.6.ebuild:
  Stable on x86 (bug #198532)

  09 Nov 2007; Ferris McCormick <fmccor@gentoo.org> ruby-mode-1.8.6.ebuild:
  Sparc stable --- Bug #198532 --- no problems.

  11 Oct 2007; Lars Weiler <pylon@gentoo.org> ruby-mode-1.8.4.ebuild:
  stable ppc, bug #195160

  09 Oct 2007; Raúl Porcel <armin76@gentoo.org> ruby-mode-1.8.4.ebuild:
  alpha stable wrt #195160

  08 Oct 2007; Christian Faulhammer <opfer@gentoo.org>
  ruby-mode-1.8.4.ebuild:
  stable x86, bug 195160

*ruby-mode-1.8.6 (08 Oct 2007)

  08 Oct 2007; Christian Faulhammer <opfer@gentoo.org>
  +ruby-mode-1.8.6.ebuild:
  version bump

  04 Jul 2007; Ulrich Mueller <ulm@gentoo.org> ruby-mode-1.8.2.ebuild,
  ruby-mode-1.8.4.ebuild:
  Remove redundant src_install. Drop ppc-macos keyword.

  08 Feb 2007; Christian Faulhammer <opfer@gentoo.org>
  -ruby-mode-1.8.0.ebuild, -ruby-mode-1.8.1.ebuild:
  clean up

  31 Jan 2007; Jeroen Roovers <jer@gentoo.org> ruby-mode-1.8.4.ebuild:
  Marked ~hppa (bug #156388).

  02 Jan 2007; Diego Pettenò <flameeyes@gentoo.org> ruby-mode-1.8.4.ebuild:
  Add ~sparc-fbsd keyword.
