@@ -1,3 +1,0 @@
-MD5 bd8c2e593e1fa4b01fd98eaf016329bb ruby-1.8.4.tar.gz 4312965
-RMD160 1c0572a4ee369af57a3db68027b2566052eac944 ruby-1.8.4.tar.gz 4312965
-SHA256 71432841b3965b7ab2d83f0dc7c3049195ea4e9267a8dc2d825a8a0466982930 ruby-1.8.4.tar.gz 4312965
