@@ -1,22 +1,0 @@
-# Copyright 1999-2008 Gentoo Foundation
-# Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-emacs/cvs-repo/gentoo-x86/app-emacs/ruby-mode/Attic/ruby-mode-1.8.4.ebuild,v 1.13 2008/01/10 08:55:59 vapier Exp $
-
-inherit elisp
-
-DESCRIPTION="Emacs major mode for editing Ruby code"
-HOMEPAGE="http://www.ruby-lang.org/"
-SRC_URI="mirror://ruby/ruby-${PV}.tar.gz"
-
-LICENSE="GPL-2"
-SLOT="0"
-KEYWORDS="alpha ~amd64 arm ~hppa ~ia64 ppc ~ppc64 s390 sh ~sparc ~sparc-fbsd x86 ~x86-fbsd"
-IUSE=""
-
-SITEFILE=50${PN}-gentoo.el
-
-S="${WORKDIR}/ruby-${PV}/misc"
-
-src_compile() {
-	elisp-comp *.el || die
-}
