@@ -1,6 +1,10 @@
 # ChangeLog for app-emacs/ruby-mode
-# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-emacs/cvs-repo/gentoo-x86/app-emacs/ruby-mode/ChangeLog,v 1.36 2007/11/16 07:32:02 ulm Exp $
+# Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /usr/local/ssd/gentoo-x86/output/app-emacs/cvs-repo/gentoo-x86/app-emacs/ruby-mode/ChangeLog,v 1.37 2008/01/10 09:23:09 opfer Exp $
+
+  10 Jan 2008; Christian Faulhammer <opfer@gentoo.org>
+  -ruby-mode-1.8.4.ebuild:
+  clean up
 
   16 Nov 2007; Ulrich Mueller <ulm@gentoo.org> -ruby-mode-1.8.2.ebuild:
   Remove old.
